--- a/package.json
+++ b/package.json
@@ -30,62 +30,63 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "ng-alain": "^18.3.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.10",
+    "@ctrl/tinycolor": "^4.1.0",
     "@delon/abc": "^18.3.0",
     "@delon/acl": "^18.3.0",
     "@delon/auth": "^18.3.0",
     "@delon/cache": "^18.3.0",
+    "@delon/chart": "^18.3.0",
     "@delon/form": "^18.3.0",
     "@delon/mock": "^18.3.0",
     "@delon/theme": "^18.3.0",
     "@delon/util": "^18.3.0",
-    "@delon/chart": "^18.3.0",
+    "ng-alain": "^18.3.0",
     "ng-zorro-antd": "^18.1.1",
-    "screenfull": "^6.0.2"
+    "rxjs": "~7.8.0",
+    "screenfull": "^6.0.2",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.12",
+    "@angular-eslint/builder": "^18.3.1",
+    "@angular-eslint/eslint-plugin": "^18.3.1",
+    "@angular-eslint/eslint-plugin-template": "^18.3.1",
+    "@angular-eslint/schematics": "^18.3.1",
+    "@angular-eslint/template-parser": "^18.3.1",
     "@angular/cli": "^18.2.12",
     "@angular/compiler-cli": "^18.2.0",
+    "@angular/language-service": "^18.2.0",
+    "@delon/testing": "^18.3.0",
+    "@ng-util/monaco-editor": "^18.0.0",
     "@types/jasmine": "~5.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "~9.1.0",
+    "eslint-plugin-deprecation": "^3.0.0",
+    "eslint-plugin-import": "~2.25.3",
+    "eslint-plugin-jsdoc": "~50.3.1",
+    "eslint-plugin-prefer-arrow": "~1.2.3",
+    "eslint-plugin-prettier": "~5.2.1",
+    "husky": "^9.1.5",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.5.2",
-    "@angular-eslint/builder": "^18.3.1",
-    "@angular-eslint/eslint-plugin": "^18.3.1",
-    "@angular-eslint/eslint-plugin-template": "^18.3.1",
-    "@angular-eslint/schematics": "^18.3.1",
-    "@angular-eslint/template-parser": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^8.8.0",
-    "@typescript-eslint/parser": "^8.8.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "~9.1.0",
-    "eslint-plugin-import": "~2.25.3",
-    "eslint-plugin-jsdoc": "~50.3.1",
-    "eslint-plugin-prefer-arrow": "~1.2.3",
-    "eslint-plugin-prettier": "~5.2.1",
-    "eslint-plugin-deprecation": "^3.0.0",
-    "prettier": "^3.3.3",
-    "husky": "^9.1.5",
+    "lint-staged": "^15.2.9",
     "ng-alain": "^18.3.0",
     "ng-alain-plugin-theme": "^18.0.0",
-    "source-map-explorer": "^2.5.3",
-    "@angular/language-service": "^18.2.0",
     "ngx-tinymce": "^18.0.0",
-    "@ng-util/monaco-editor": "^18.0.0",
-    "@delon/testing": "^18.3.0",
-    "lint-staged": "^15.2.9",
+    "prettier": "^3.3.3",
+    "source-map-explorer": "^2.5.3",
     "stylelint": "^16.8.2",
+    "stylelint-config-clean-order": "^6.1.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-declaration-block-no-ignored-properties": "^2.8.0",
-    "stylelint-config-clean-order": "^6.1.0"
+    "typescript": "~5.5.2"
   },
   "lint-staged": {
     "(src)/**/*.{html,ts}": [
