--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,25 +19,15 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
-    "lib": [
-      "ES2022",
-      "dom"
-    ],
+    "lib": ["ES2022", "dom"],
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "paths": {
-      "@shared": [
-        "src/app/shared/index"
-      ],
-      "@core": [
-        "src/app/core/index"
-      ],
-      "@env/*": [
-        "src/environments/*"
-      ],
-      "@_mock": [
-        "_mock/index"
-      ]
+      "@shared": ["src/app/shared/index"],
+      "@core": ["src/app/core/index"],
+      "@layout": ["src/app/layout/index"],
+      "@env/*": ["src/environments/*"],
+      "@_mock": ["_mock/index"]
     }
   },
   "angularCompilerOptions": {
