--- a/package.json
+++ b/package.json
@@ -3,10 +3,22 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "ng s -o",
+    "build": "npm run ng-high-memory build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "ng-high-memory": "node --max_old_space_size=8000 ./node_modules/@angular/cli/bin/ng",
+    "hmr": "ng s -o --hmr",
+    "analyze": "npm run ng-high-memory build -- --source-map",
+    "analyze:view": "source-map-explorer dist/**/*.js",
+    "test-coverage": "ng test --code-coverage --watch=false",
+    "color-less": "ng-alain-plugin-theme -t=colorLess",
+    "theme": "ng-alain-plugin-theme -t=themeCss",
+    "icon": "ng g ng-alain:plugin icon",
+    "prepare": "husky install",
+    "lint": "npm run lint:ts && npm run lint:style",
+    "lint:ts": "ng lint --fix",
+    "lint:style": "npx stylelint \"src/**/*.less\" --fix"
   },
   "private": true,
   "dependencies": {
@@ -18,9 +30,21 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "ng-alain": "^19.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "@delon/abc": "^19.0.1",
+    "@delon/acl": "^19.0.1",
+    "@delon/auth": "^19.0.1",
+    "@delon/cache": "^19.0.1",
+    "@delon/form": "^19.0.1",
+    "@delon/mock": "^19.0.1",
+    "@delon/theme": "^19.0.1",
+    "@delon/util": "^19.0.1",
+    "@delon/chart": "^19.0.1",
+    "ng-zorro-antd": "^19.0.2",
+    "screenfull": "^6.0.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.7",
@@ -33,6 +57,42 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "typescript": "~5.7.2",
+    "@angular-eslint/builder": "^19.0.2",
+    "@angular-eslint/eslint-plugin": "^19.0.2",
+    "@angular-eslint/eslint-plugin-template": "^19.0.2",
+    "@angular-eslint/schematics": "^19.0.2",
+    "@angular-eslint/template-parser": "^19.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "~9.1.0",
+    "eslint-plugin-import": "~2.31.0",
+    "eslint-plugin-jsdoc": "~50.6.2",
+    "eslint-plugin-prefer-arrow": "~1.2.3",
+    "eslint-plugin-prettier": "~5.2.2",
+    "eslint-plugin-deprecation": "^3.0.0",
+    "prettier": "^3.4.2",
+    "husky": "^9.1.7",
+    "ng-alain": "^19.0.1",
+    "ng-alain-plugin-theme": "^18.0.0",
+    "source-map-explorer": "^2.5.3",
+    "@angular/language-service": "^19.1.1",
+    "ngx-tinymce": "^19.0.0",
+    "@ng-util/monaco-editor": "^19.0.0",
+    "@delon/testing": "^19.0.1",
+    "lint-staged": "^15.4.1",
+    "stylelint": "^16.13.2",
+    "stylelint-config-standard": "^37.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.8.0",
+    "stylelint-config-clean-order": "^7.0.0"
+  },
+  "lint-staged": {
+    "(src)/**/*.{html,ts}": [
+      "eslint --fix"
+    ],
+    "(src)/**/*.less": [
+      "npm run lint:style"
+    ]
   }
 }
