--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,18 +20,11 @@
     "allowSyntheticDefaultImports": true,
     "baseUrl": "./",
     "paths": {
-      "@shared": [
-        "src/app/shared/index"
-      ],
-      "@core": [
-        "src/app/core/index"
-      ],
-      "@env/*": [
-        "src/environments/*"
-      ],
-      "@_mock": [
-        "_mock/index"
-      ]
+      "@layout": ["src/app/layout/index"],
+      "@shared": ["src/app/shared/index"],
+      "@core": ["src/app/core/index"],
+      "@env/*": ["src/environments/*"],
+      "@_mock": ["_mock/index"]
     }
   },
   "angularCompilerOptions": {
