删除mock相关模块及引用

--- a/angular.json
+++ b/angular.json
@@ -70,8 +70,7 @@
               "ajv",
               "ajv-formats",
               "extend",
-              "file-saver",
-              "mockjs"
+              "file-saver"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
