--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,7 @@
       "@layout": ["src/app/layout/index"],
       "@shared": ["src/app/shared/index"],
       "@core": ["src/app/core/index"],
-      "@env/*": ["src/environments/*"],
-      "@_mock": ["_mock/index"]
+      "@env/*": ["src/environments/*"]
     }
   },
   "angularCompilerOptions": {
