--- a/package.json
+++ b/package.json
@@ -30,61 +30,62 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
-    "ng-alain": "^19.0.1",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0",
     "@delon/abc": "^19.0.1",
     "@delon/acl": "^19.0.1",
     "@delon/auth": "^19.0.1",
     "@delon/cache": "^19.0.1",
+    "@delon/chart": "^19.0.1",
     "@delon/form": "^19.0.1",
     "@delon/theme": "^19.0.1",
     "@delon/util": "^19.0.1",
-    "@delon/chart": "^19.0.1",
+    "date-fns": "^4.1.0",
+    "ng-alain": "^19.0.1",
     "ng-zorro-antd": "^19.0.2",
-    "screenfull": "^6.0.2"
+    "rxjs": "~7.8.0",
+    "screenfull": "^6.0.2",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.7",
+    "@angular-eslint/builder": "^19.0.2",
+    "@angular-eslint/eslint-plugin": "^19.0.2",
+    "@angular-eslint/eslint-plugin-template": "^19.0.2",
+    "@angular-eslint/schematics": "^19.0.2",
+    "@angular-eslint/template-parser": "^19.0.2",
     "@angular/cli": "^19.1.7",
     "@angular/compiler-cli": "^19.1.0",
+    "@angular/language-service": "^19.1.1",
+    "@delon/testing": "^19.0.1",
+    "@ng-util/monaco-editor": "^19.0.0",
     "@types/jasmine": "~5.1.0",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "~9.1.0",
+    "eslint-plugin-deprecation": "^3.0.0",
+    "eslint-plugin-import": "~2.31.0",
+    "eslint-plugin-jsdoc": "~50.6.2",
+    "eslint-plugin-prefer-arrow": "~1.2.3",
+    "eslint-plugin-prettier": "~5.2.2",
+    "husky": "^9.1.7",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2",
-    "@angular-eslint/builder": "^19.0.2",
-    "@angular-eslint/eslint-plugin": "^19.0.2",
-    "@angular-eslint/eslint-plugin-template": "^19.0.2",
-    "@angular-eslint/schematics": "^19.0.2",
-    "@angular-eslint/template-parser": "^19.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.20.0",
-    "@typescript-eslint/parser": "^8.20.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "~9.1.0",
-    "eslint-plugin-import": "~2.31.0",
-    "eslint-plugin-jsdoc": "~50.6.2",
-    "eslint-plugin-prefer-arrow": "~1.2.3",
-    "eslint-plugin-prettier": "~5.2.2",
-    "eslint-plugin-deprecation": "^3.0.0",
-    "prettier": "^3.4.2",
-    "husky": "^9.1.7",
+    "lint-staged": "^15.4.1",
     "ng-alain": "^19.0.1",
     "ng-alain-plugin-theme": "^18.0.0",
-    "source-map-explorer": "^2.5.3",
-    "@angular/language-service": "^19.1.1",
     "ngx-tinymce": "^19.0.0",
-    "@ng-util/monaco-editor": "^19.0.0",
-    "@delon/testing": "^19.0.1",
-    "lint-staged": "^15.4.1",
+    "prettier": "^3.4.2",
+    "source-map-explorer": "^2.5.3",
     "stylelint": "^16.13.2",
+    "stylelint-config-clean-order": "^7.0.0",
     "stylelint-config-standard": "^37.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.8.0",
-    "stylelint-config-clean-order": "^7.0.0"
+    "typescript": "~5.7.2"
   },
   "lint-staged": {
     "(src)/**/*.{html,ts}": [
